some CSS property Added

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -34,14 +34,17 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem at aliquid, aspernatur sunt voluptatum,
                 magni dolorum commodi tenetur saepe nisi necessitatibus labore temporibus facere molestiae suscipit
                 minima sit praesentium corrupti!</p>
+            <div class="social-media">
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
         </div>
-        <div class="social-media">
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-github"></i></a>
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            
+        <a href="#" class="btn">Download My CV</a>
+        </div>
+        <div class="home-image">
+            <img src="img/profile.png" alt="">
         </div>
     </section>
     <script src="script.jss"></script>
