--- a/HTML5/1_Heading.html
+++ b/HTML5/1_Heading.html
@@ -2,6 +2,24 @@
 <!--* 1: HTML HEADING ELEMENTS  
 <!-- *---------------------------------------- -->
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My HTML Website</title>
+</head>
+<body>
+    <h1>This is the HTML Tutorial from Thapa Technical</h1>
+    <h2>This is the HTML Tutorial from Thapa Technical</h2>
+    <h3>This is the HTML Tutorial from Thapa Technical</h3>
+    <h4>This is the HTML Tutorial from Thapa Technical</h4>
+    <h5>This is the HTML Tutorial from Thapa Technical</h5>
+    <h6>This is the HTML Tutorial from Thapa Technical</h6>
+    
+</body>
+</html>
+
 <!--? The <h1> to <h6> tags create headings in HTML, where <h1> is the biggest and most important, and <h6> is the smallest and least important. -->
 
 <!-- *------------------------------------- -->
@@ -16,6 +34,10 @@
 <!--* INTERVIEW Q: HTML HEADING ELEMENTS  
 <!-- *---------------------------------------- -->
 <!--? 1: How many levels of headings are available in HTML? -->
+<!-- 6 -->
 <!--? 2: What is the default font size for HTML headings? -->
+<!-- It depends on the screen size-->
 <!--? 3: What happens if you skip heading levels, such as going from <h1> to <h3>? -->
+<!-- It confuse both editor and SEO-->
 <!--? 4: How many <h1> tags can be used on a single page? -->
+<!-- Only 1 -->
