--- a/HTML5/2_Para.html
+++ b/HTML5/2_Para.html
@@ -22,9 +22,11 @@
 
     <hr>
 
-    <p>HTML5 provides native audio and video support. HTML only supports vector graphics if used in conjunction with
+    <!-- THIS IS A COMMENTS-->
+    <!--<p>HTML5 provides native audio and video support. HTML only supports vector graphics if used in conjunction with
     different technologies like Flash, VML, or Silverlight. HTML5 supports SVG (Scalable Vector Graphics), Canvas,
-    and other virtual vector graphics. HTML allows inline MathML and SVG in text with restricted use.</p>
+    and other virtual vector graphics. HTML allows inline MathML and SVG in text with restricted use.</p> -->
+
 </body>
 
 </html>
