--- a/HTML5/3_Text_format.html
+++ b/HTML5/3_Text_format.html
@@ -21,13 +21,13 @@
     <!--? Bold and Italic: 
       <strong>: Represents strong importance. Text inside this tag is typically displayed in bold. <em>: Represents emphasized text. Text inside this tag is usually displayed in italics. -->
     <hr />
-    <p>This is important and emphasized text.</p>
+    <p>This is <strong>important</strong> and <em>emphasized</em> text.</p>
 
     <!--? Underline and Strikethrough:
     <u>: Represents underlined text.
     <s>: Represents strikethrough text (crossed out). -->
     <hr />
-    <p>This is underlined and strikethrough text.</p>
+    <p>This is <u>underlined</u> and <s>strikethrough</s> text.</p>
 
     <!--? Subscript and Superscript:
     <sub>: Represents subscript text (lower and smaller).
