--- a/HTML5/anchor.html
+++ b/HTML5/anchor.html
@@ -2,21 +2,97 @@
 <!--* HTML ANCHOR TAG  
 <!-- *---------------------------------------- -->
 <!--? The <a> tag defines a hyperlink, which is used to link from one page to another. -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HTMl Anchor Tag</title>
+  <style>
+    html{
+      scroll-behavior: smooth;
+    }
+  </style>
+</head>
+<body>
+  <h1>HTML Anchor Tag</h1>
+  <p>HTML (HyperText Markup Language) is the code that is used to structure a web page and its content. For example,
+    content could be structured within a set of paragraphs, a list of bulleted points, or using images and data tables.
+  </p>
+  <br>
+  <a href="https://www.youtube.com/@TechCoderss" target="_blank">Subscribe Now</a>
+  <br>
+  <a href="#myprofile">Go to my profile</a>
+  <h1>HTML Anchor Tag</h1>
+  <p>HTML (HyperText Markup Language) is the code that is used to structure a web page and its content. For example,
+    content could be structured within a set of paragraphs, a list of bulleted points, or using images and data tables.
+  </p>
+  <h1>HTML Anchor Tag</h1>
+  <p>HTML (HyperText Markup Language) is the code that is used to structure a web page and its content. For example,
+    content could be structured within a set of paragraphs, a list of bulleted points, or using images and data tables.
+  </p>
+</p>
+<h1>HTML Anchor Tag</h1>
+<p>HTML (HyperText Markup Language) is the code that is used to structure a web page and its content. For example,
+  content could be structured within a set of paragraphs, a list of bulleted points, or using images and data tables.
+</p>
+</p>
+<h1>HTML Anchor Tag</h1>
+<p>HTML (HyperText Markup Language) is the code that is used to structure a web page and its content. For example,
+  content could be structured within a set of paragraphs, a list of bulleted points, or using images and data tables.
+</p>
+</p>
+<h1>HTML Anchor Tag</h1>
+<p>HTML (HyperText Markup Language) is the code that is used to structure a web page and its content. For example,
+  content could be structured within a set of paragraphs, a list of bulleted points, or using images and data tables.
+</p>
+</p>
+<h1>HTML Anchor Tag</h1>
+<p>HTML (HyperText Markup Language) is the code that is used to structure a web page and its content. For example,
+  content could be structured within a set of paragraphs, a list of bulleted points, or using images and data tables.
+</p>
+</p>
+<h1>HTML Anchor Tag</h1>
+<p>HTML (HyperText Markup Language) is the code that is used to structure a web page and its content. For example,
+  content could be structured within a set of paragraphs, a list of bulleted points, or using images and data tables.
+</p>
+  <h1>HTML Anchor Tag</h1>
+  <p>HTML (HyperText Markup Language) is the code that is used to structure a web page and its content. For example,
+    content could be structured within a set of paragraphs, a list of bulleted points, or using images and data tables.
+  </p>
+  <h1 id="myprofile">My Profile</h1>
+  <p>HTML (HyperText Markup Language) is the code that is used to structure a web page and its content. For example,
+    content could be structured within a set of paragraphs, a list of bulleted points, or using images and data tables.
+  </p>
+</body>
+
+</html>
 
 <!-- *------------------------------------- -->
 <!--* HTML ANCHOR TAG - ATTRIBUTES
 <!-- *---------------------------------------- -->
 
 <!-- href: Specifies the URL or destination the link points to.
+
 target: Specifies where the linked content will be displayed (e.g., _blank for a new window/tab).
+
 download: Suggests that the target will be downloaded when clicked.
+
 rel: Describes the relationship between the current page and the linked page.
+
 title: Provides additional information when hovering over the link.
+
 id: Assigns a unique identifier to the anchor for linking within the page.
+
 class: Assigns a class for styling or JavaScript interactions.
+
 style: Applies inline CSS styling to the anchor.
+
 tabindex: Specifies the tab order when navigating using the keyboard.
+
 accesskey: Defines a keyboard shortcut to activate the link.
+
 aria-*: Attributes for accessibility purposes (e.g., aria-label). -->
 
 <!-- *------------------------------------- -->
@@ -27,34 +103,34 @@ aria-*: Attributes for accessibility purposes (e.g., aria-label). -->
 <!-- To create a link that takes the user to a specific section or element within the
 same webpage, you can use the anchor (a) tag's href attribute along with the id attribute of the target element. -->
 
-  <!--* 2: What's the difference between relative and absolute URLs in the href attribute? -->
-  <!-- Relative URLs are URLs that are relative to the current page's URL. 
+<!--* 2: What's the difference between relative and absolute URLs in the href attribute? -->
+<!-- Relative URLs are URLs that are relative to the current page's URL. 
   Absolute URLs are complete URLs, including the protocol (http/https) and domain. -->
 
-  <!--* 3: How does the download attribute work in the anchor tag? -->
-  <!-- The download attribute suggests that the linked resource should be downloaded instead of navigated to, prompting the user to download the file. -->
+<!--* 3: How does the download attribute work in the anchor tag? -->
+<!-- The download attribute suggests that the linked resource should be downloaded instead of navigated to, prompting the user to download the file. -->
 
-  <!--* 4: How do you create an HTML link that opens the user's default email client with a specific email address? -->
+<!--* 4: How do you create an HTML link that opens the user's default email client with a specific email address? -->
 
 
-  <!--* 5: How can you create a clickable link in HTML that allows users to directly initiate a phone call when clicked? -->
-  <!-- To create a link that enables users to initiate a phone call when clicked, you can use the anchor tag's href attribute with the tel: protocol.  -->
- 
+<!--* 5: How can you create a clickable link in HTML that allows users to directly initiate a phone call when clicked? -->
+<!-- To create a link that enables users to initiate a phone call when clicked, you can use the anchor tag's href attribute with the tel: protocol.  -->
+
 
 
 <!-- *------------------------------------- -->
 <!--* BONUS: HTML ANCHOR TAG  
 <!-- *---------------------------------------- -->
 
-  <!--* ALSO WHEN TO USE QUOTES, WHEN NOT TO  -->
+<!--* ALSO WHEN TO USE QUOTES, WHEN NOT TO  -->
 
-    <a href=https://www.mozilla.org/>favorite website</a>
-    <a href=https://www.mozilla.org/ title=The Mozilla homepage>favorite website</a>
+<!--<a href=https://www.mozilla.org />favorite website</a>
+<a href=https://www.mozilla.org/ title=The Mozilla homepage>favorite website</a>
 
 <!-- So the best practice is Always include the attribute quotes. It avoids such problems, and results in more readable code. -->
 
 <!--* Single or double quotes?  -->
-<a href="https://www.example.com">A link to my example.</a>
+<!--<a href="https://www.example.com">A link to my example.</a>
 
 <a href="https://www.example.com">A link to my example.</a>
 
@@ -62,6 +138,6 @@ same webpage, you can use the anchor (a) tag's href attribute along with the id 
 <!-- ❌ <a href="https://www.example.com'>A link to my example.</a> -->
 
 <!-- However, if you use one type of quote, you can include the other type of quote inside your attribute values: -->
-<a href="https://www.example.com" title="Isn't this fun?">
+<!--<a href="https://www.example.com" title="Isn't this fun?">
   A link to my example.
 </a>
