--- a/HTML5/anchor.html
+++ b/HTML5/anchor.html
@@ -23,6 +23,8 @@
   <br>
   <a href="https://www.youtube.com/@TechCoderss" target="_blank">Subscribe Now</a>
   <br>
+  <a href="./video/thapatech.mp4" target="_blank" download="Download Now" title="thapatech">Download the file Now</a>
+  <br>
   <a href="#myprofile">Go to my profile</a>
   <h1>HTML Anchor Tag</h1>
   <p>HTML (HyperText Markup Language) is the code that is used to structure a web page and its content. For example,
