--- a/HTML5/anchor.html
+++ b/HTML5/anchor.html
@@ -67,6 +67,9 @@
   <p>HTML (HyperText Markup Language) is the code that is used to structure a web page and its content. For example,
     content could be structured within a set of paragraphs, a list of bulleted points, or using images and data tables.
   </p>
+  <a href="mailto: businesswithsamir@gmail.com">Mail to Samir</a>
+  <br>
+  <a href="tel: +918271157125">Call to samir</a>
 </body>
 
 </html>
