--- a/HTML5/5_Entities.html
+++ b/HTML5/5_Entities.html
@@ -25,6 +25,8 @@
   <body>
     <p>This is an example of a &lt;p&gt; tag.</p>
     <p>&copy; 2023 ThapaTechnical Company. All rights reserved.</p>
+    <br>
+    <p>&quot; 2023 ThapaTechnical Company. All rights reserved.</p>
   </body>
 </html>
 
