--- a/HTML5/6_Img.html
+++ b/HTML5/6_Img.html
@@ -2,6 +2,25 @@
 <!--* HTML IMAGE TAG  
 <!-- *---------------------------------------- -->
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HTML Image Tag</title>
+</head>
+<body>
+  <img 
+  src="./images/html.jpeg" 
+  alt="Banner"
+  width="700"
+  height="400"
+  title="Banner art"
+  loading="lazy"
+  >
+</body>
+</html>
+
 <!--TODO  Deprecated Tags of HTML Images  -->
 <!-- align, border, hspace, vspace -->
 
