--- a/HTML5/6_Img.html
+++ b/HTML5/6_Img.html
@@ -10,6 +10,7 @@
   <title>HTML Image Tag</title>
 </head>
 <body>
+  <a href="https://www.edywo.com/" target="_blank">
   <img 
   src="./images/html.jpeg" 
   alt="Banner"
@@ -18,6 +19,7 @@
   title="Banner art"
   loading="lazy"
   >
+</a>
 </body>
 </html>
 
