--- a/HTML5/6_Img.html
+++ b/HTML5/6_Img.html
@@ -14,12 +14,22 @@
   <img 
   src="./images/html.jpeg" 
   alt="Banner"
-  width="700"
+  width="600"
   height="400"
   title="Banner art"
   loading="lazy"
   >
 </a>
+<img src="./images/html.png" usemap = "#samir" alt = "HTML Tutorial" width = "600" height = "400" />
+<map name = "#samir">
+  <area 
+        shape="rect"
+        coords="0,0,180,180"
+        href="https://www.w3schools.com/html/html_images_imagemap.asp"
+        alt="My Link"
+        target="_blank"
+      >
+</map>
 </body>
 </html>
 
