--- a/HTML5/8_Figure.html
+++ b/HTML5/8_Figure.html
@@ -31,7 +31,10 @@
       Check out Thapa Technical to boost your chances of getting hired in this
       field!
     </p>
-    <!-- add figure tag here  -->
+    <figure>
+      <img src="./images/html.jpg" width="1000" height="700" />
+      <figcaption>The Course is in progress</figcaption>
+    </figure>
     <p>
       Thapa Technical is an amazing YouTube channel for learning web
       development. Their tutorials are easy to follow and enjoyable. By watching
