--- a/HTML5/9_Lists.html
+++ b/HTML5/9_Lists.html
@@ -2,6 +2,52 @@
 <!--*  HTML LIST - ORDER VS UNORDERED TAG  
 <!-- *---------------------------------------- -->
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HTML Lists</title>
+</head>
+<body>
+  <h1>HTML Lists</h1>
+  <ul style="list-style-type: square">
+    <li>Apple</li>
+    <li>Mango</li>
+    <li>Bannan</li>
+    <li>Orange</li>
+    <li>Pineapple</li>
+  </ul>
+
+  <ol start="10">
+    <li>Apple</li>
+    <li>Mango</li>
+    <li>Bannan</li>
+    <li>Orange</li>
+    <li>Pineapple</li>
+  </ol>
+
+  <ul>
+     <li>Friuts
+      <ol>
+        <li>Apple</li>
+        <li>Mango</li>
+        <li>Banana</li>
+      </ol>
+     </li>
+     </ul>
+     <ul>
+     <li>Vegetables
+      <ol>
+        <li>Potato</li>
+        <li>Tomato</li>
+        <li>Cauliflower</li>
+      </ol>
+     </li>
+  </ul>
+</body>
+</html>
+
 <!-- 
   
 ?Unordered List (<ul>) Example:  An unordered list is used to create a list of items that are not in any particular order. Each list item is marked with a bullet point.
@@ -9,10 +55,13 @@
   
 Unordered List (<ul>) Styles:
 
+
   Disc (list-style-type: disc;): Default style - filled circles.
   Circle (list-style-type: circle;): Hollow circles.
   Square (list-style-type: square;): Squares.
   None (list-style-type: none;): No bullet points.
+
+
 
       
     
