--- a/HTML5/10_Table.html
+++ b/HTML5/10_Table.html
@@ -2,7 +2,79 @@
 <!--*  HTML TABLE TAG  
 <!-- *---------------------------------------- -->
 <!--? The <table> HTML element represents tabular data — that is, information presented in a two-dimensional table comprised of rows and columns of cells containing data. -->
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HTML Table</title>
+</head>
+<body>
+  <table border="2px">
+    <thead>
+      <tr>
+        <td>Mon</td>
+        <td>Tue</td>
+        <td>Wed</td>
+        <td>Thur</td>
+        <td>Fri</td>
+        <td>Sat</td>
+      </tr>
+      <tr>
+        <td>Mon</td>
+        <td>Tue</td>
+        <td>Wed</td>
+        <td>Thur</td>
+        <td>Fri</td>
+        <td>Sat</td>
+      </tr>
+    </thead>
+  </table>
+  <hr>
+  <table>
+    <thead>
+      <tr>
+        <th>TIME TABLE</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+      <td>Hours</td>
+      <td>Mon</td>
+      <td>Tue</td>
+      <td>Wed</td>
+      <td>Thr</td>
+      <td>Fri</td>
+      <td>Sat</td>
+      </tr>
+      <tr>
+        <td>Mon</td>
+        <td>Tue</td>
+        <td>Wed</td>
+        <td>Thr</td>
+        <td>Fri</td>
+        <td>Sat</td>
+        </tr>
+        <tr>
+          <td>Mon</td>
+          <td>Tue</td>
+          <td>Wed</td>
+          <td>Thr</td>
+          <td>Fri</td>
+          <td>Sat</td>
+          </tr>
+          <tr>
+            <td>Mon</td>
+            <td>Tue</td>
+            <td>Wed</td>
+            <td>Thr</td>
+            <td>Fri</td>
+            <td>Sat</td>
+            </tr>
+    </tbody>
+  </table>
+</body>
+</html>
 <!-- *------------------------------------- -->
 <!--*  LIST OF DEPRECATED TAGS - HTML TABLES
 <!-- *---------------------------------------- -->
